--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,177 @@ code {
     monospace;
 }
 
+body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.container {
+    padding: 45px;
+    box-sizing: border-box;
+    width: 100vw;
+    height: 100vh;
+}
+
 .sd-question__content {
     display: flex;
     justify-content: center;
+}
+
+.body-frame-banner {
+    position: absolute;
+}
+
+.body-frame-banner-top {
+    border-bottom: 1px solid #fbbffa;
+    top: 0;
+    left: 0;
+    height: 45px;
+    z-index: 2;
+}
+
+.body-frame-banner-top-left-corner-0 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    top: 0;
+    right: -22px;
+    height: 45px;
+    z-index: 40;
+    rotate: -45deg;
+}
+
+.body-frame-banner-top-left-corner-1 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    top: 0;
+    right: -45px;
+    height: 45px;
+    z-index: 30;
+    rotate: -45deg;
+}
+
+.body-frame-banner-top-left-corner-2 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    top: 0;
+    right: -67px;
+    height: 45px;
+    z-index: 20;
+    rotate: -45deg;
+}
+
+.body-frame-banner-right {
+    border-left: 1px solid #fbbffa;
+    bottom: 0;
+    right: 0;
+    width: 45px;
+    z-index: 1;
+}
+
+.body-frame-banner-top-right-corner-0 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    top: 0;
+    left: -22px;
+    height: 45px;
+    z-index: 40;
+    rotate: 45deg;
+}
+
+.body-frame-banner-top-right-corner-1 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    top: 0;
+    left: -45px;
+    height: 45px;
+    z-index: 30;
+    rotate: 45deg;
+}
+
+.body-frame-banner-top-right-corner-2 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    top: 0;
+    left: -67px;
+    height: 45px;
+    z-index: 20;
+    rotate: 45deg;
+}
+
+
+.body-frame-banner-bottom {
+    border-top: 1px solid #fbbffa;
+    bottom: 0;
+    left: 0;
+    height: 45px;
+    z-index: 2;
+}
+
+.body-frame-banner-bottom-left-corner-0 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    bottom: 0;
+    right: -22px;
+    height: 45px;
+    z-index: 40;
+    rotate: 45deg;
+}
+
+.body-frame-banner-bottom-left-corner-1 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    bottom: 0;
+    right: -45px;
+    height: 45px;
+    z-index: 30;
+    rotate: 45deg;
+}
+
+.body-frame-banner-bottom-left-corner-2 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    bottom: 0;
+    right: -67px;
+    height: 45px;
+    z-index: 20;
+    rotate: 45deg;
+}
+
+.body-frame-banner-left {
+    border-right: 1px solid #fbbffa;
+    bottom: 0;
+    left: 0;
+    width: 45px;
+    z-index: 1;
+}
+
+.body-frame-banner-bottom-right-corner-0 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    bottom: 0;
+    left: -22px;
+    height: 45px;
+    z-index: 40;
+    rotate: -45deg;
+}
+
+.body-frame-banner-bottom-right-corner-1 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    bottom: 0;
+    left: -45px;
+    height: 45px;
+    z-index: 30;
+    rotate: -45deg;
+}
+
+.body-frame-banner-bottom-right-corner-2 {
+    border-bottom: 1px solid #fbbffa;
+    border-top: 1px solid #fbbffa;
+    bottom: 0;
+    left: -67px;
+    height: 45px;
+    z-index: 20;
+    rotate: -45deg;
 }
