--- a/src/index.css
+++ b/src/index.css
@@ -186,3 +186,43 @@ body {
     z-index: 20;
     rotate: -45deg;
 }
+
+.container{
+    background-color: rgb(254, 252, 254);
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+
+}
+.sd-root-modern{
+    background-color: rgb(254, 252, 254) !important;
+    display: flex !important;
+    justify-content: center !important;
+    /*align-items: center !important;*/
+}
+.sd-container-modern{
+    background-color: #fbbffa !important;
+}
+
+.sd-row__question{
+    background-color: rgb(254, 252, 254) !important;
+}
+
+.sd-rating__item{
+    background-color: #fcebfa !important;
+    border: none !important;
+}
+
+.sd-rating__item--selected{
+    background-color: #fddcfd !important;
+}
+
+.sd-rating__item--allowhover:hover{
+    border: #fddcfd 1px solid !important;
+}
+.sd-action-bar{
+    justify-content: space-between;
+}
+.sd-btn{
+    color: #d556c5 !important;
+}
