--- a/src/styles/survey.css
+++ b/src/styles/survey.css
@@ -13,8 +13,9 @@
 }
 
 .sd-rating__item{
-    background-color: #fcebfa !important;
-    border: none !important;
+    background-color: rgb(254, 252, 254) !important;
+    border: #fddcfd 2px solid !important;
+    box-shadow: 0 1px 2px rgba(0,0,0,.15) !important;
 }
 
 .sd-rating__item--selected{
@@ -22,20 +23,37 @@
 }
 
 .sd-rating__item--allowhover:hover{
-    border: #fddcfd 1px solid !important;
+    background-color: #fdeefd !important;
 }
 .sd-action-bar{
-    justify-content: space-between;
+    justify-content: space-between !important;
 }
 .sd-btn{
     color: #d556c5 !important;
 }
 
+.sd-btn:active{
+    background-color: #fbbffa !important;
+    border: 1px #d556c5 solid !important;
+}
+.sd-btn:active{
+    background-color: #fbbffa !important;
+    border: 1px #d556c5 solid !important;
+}
+
 .sd-navigation__complete-btn{
     background-color: #ff8bfc !important;
     color: white !important;
+    visibility: hidden;
 }
 
 .sd-rating__item{
     border-radius: 5px !important;
+}
+
+.sd-question__erbox{
+    color: #d55656 !important;
+    background-color: #ffe0e0 !important;
+    font-size: 20px !important;
+    padding: 30px 0 30px 30px!important;
 }
