--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,24 +1,46 @@
-
 .home {
   width: 100%;
   height: 100%;
-  box-shadow: inset 0 0 10px #f8a100;
-  display: flex;
-  justify-content: center;
-  background-color: #afe2ee36;
+}
+
+.home-image-container {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+}
+
+.home-link {
+  position: absolute;
+  top: 20%;
+  left: 25%;
+  background-color: magenta;
+  z-index: 10;
+  padding: 2px 2px 2px 5px;
+  width: 200px;
+}
+
+.home-link a {
+  font-family: 'Horizon';
+  text-decoration: none;
+  color: white;
 }
 
 .home-image {
+  width: 100%;
   height: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .home-image {
+  .home-image-container {
     animation: home-image-spin infinite 500s linear;
+  }
+
+  .home-image-link {
+    animation: home-image-spin-compensate infinite 500s linear;
   }
 }
 
-.home-image {
+.home-image-container {
   pointer-events: none;
 }
 
@@ -28,5 +50,14 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes home-image-spin-compensate {
+  from {
+    transform: rotate(360deg);
+  }
+  to {
+    transform: rotate(0deg);
   }
 }
