--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,197 @@
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-Medium.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-BlackItalic.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-BlackItalic.woff') format('woff');
+    font-weight: 900;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-Black.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-Black.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-Bold.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-BoldItalic.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-BoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-MediumItalic.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-MediumItalic.woff') format('woff');
+    font-weight: 500;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-LightItalic.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-LightItalic.woff') format('woff');
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-Regular.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-Italic.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-ThinItalic.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-ThinItalic.woff') format('woff');
+    font-weight: 100;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-Thin.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-Thin.woff') format('woff');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('/public/fonts/roboto/Roboto-Light.woff2') format('woff2'),
+    url('/public/fonts/roboto/Roboto-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon Elementsfour';
+    src: url('/public/fonts/horizon/HorizonElementsfour.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonElementsfour.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon Outline';
+    src: url('/public/fonts/horizon/HorizonOutline.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonOutline.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon Linestwo';
+    src: url('/public/fonts/horizon/HorizonLinestwo.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonLinestwo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon Elements';
+    src: url('/public/fonts/horizon/HorizonElements.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonElements.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon Elementsthree';
+    src: url('/public/fonts/horizon/HorizonElementsthree.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonElementsthree.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon';
+    src: url('/public/fonts/horizon/HorizonRegular.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonRegular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon Elementstwo';
+    src: url('/public/fonts/horizon/HorizonElementstwo.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonElementstwo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon Outlinetwo';
+    src: url('/public/fonts/horizon/HorizonOutlinetwo.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonOutlinetwo.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Horizon Lines';
+    src: url('/public/fonts/horizon/HorizonLines.woff2') format('woff2'),
+    url('/public/fonts/horizon/HorizonLines.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    --sjs-font-questiontitle-family: 'Roboto Thin', 'Roboto Light', 'Roboto' sans-serif;
+    --font-family: 'Roboto Thin', 'Roboto Light', 'Roboto', sans-serif;
+    font-family: 'Roboto Thin', 'Roboto Light', 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -187,10 +376,42 @@ body {
     rotate: -45deg;
 }
 
-.container{
-    background-color: rgb(254, 252, 254);
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
+.body-frame-banner-corner {
+    box-shadow: 0 0 20px #fbbffa;
+}
 
+.body-frame-banner-border {
+    box-shadow: inset 0 0 20px #fbbffa;
+}
+
+.frame-shadow {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    box-shadow: inset 0 0 20px #fbbffa6e;
+    z-index: 1000;
+}
+
+.container-shadow-outset {
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 0 10px #fbbffa;
+}
+
+.container-shadow-inset {
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 300px #fbbffa6e, inset 0 0 10px #fbbffa;
+    display: flex;
+    justify-content: center;
+    align-items: center !important;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center !important;
+    background-color: rgba(175, 226, 238, 0);
 }
