--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -19,14 +19,19 @@
   width: 250px;
   color: white;
   font-family: "Horizon Outline";
+  height: calc(1rem + 1px);
 }
 
 .home-link .typed-cursor {
   position: relative;
   font-size: 0.75rem;
+  top: -2px;
 }
 
 .home-link .typed-cursor.typed-cursor--blink {
+  position: relative;
+  font-size: 0.75rem;
+  top: -2px;
   display: none;
 }
 
@@ -35,8 +40,6 @@
   font-family: 'Horizon';
   text-decoration: none;
   color: white;
-  top: 1px;
-  position: relative;
 }
 
 .home-image {
