--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -415,3 +415,19 @@ body {
     align-items: center !important;
     background-color: rgba(175, 226, 238, 0);
 }
+
+.select-disable {
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.select-enable {
+    -webkit-user-select: text;
+    -khtml-user-select: text;
+    -moz-user-select: text;
+    -o-user-select: text;
+    user-select: text;
+}
