--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -16,6 +16,8 @@
   z-index: 10;
   width: 250px;
   color: white;
+  animation: float 30s ease-in-out infinite;
+  box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
 }
 
 .home-link-header {
@@ -95,5 +97,23 @@
   }
   to {
     transform: rotate(0deg);
+  }
+}
+
+@keyframes float {
+  0% {
+    transform: translate(0, 0);
+  }
+  25% {
+    transform: translate(-20px, -30px);
+  }
+  50% {
+    transform: translate(20px, 10px);
+  }
+  75% {
+    transform: translate(40px, -10px);
+  }
+  100% {
+    transform: translate(0, 0);
   }
 }
