--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -17,7 +17,7 @@
   width: 250px;
   color: white;
   animation: float 30s ease-in-out infinite;
-  box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 25px 15px 0 rgba(0, 0, 0, 0.2);
 }
 
 .home-link-header {
@@ -34,7 +34,7 @@
 }
 
 .home-link-header-text a {
-  font-family: 'Horizon';
+  font-family: 'Horizon', serif;
   text-decoration: underline;
   color: white;
 }
@@ -66,6 +66,19 @@
 .home-image {
   width: 100%;
   height: 100%;
+}
+
+.greetings {
+  position: relative;
+  bottom: calc(1rem + 9px);
+  right: 3px;
+  text-align: right;
+}
+
+.greetings a {
+  text-decoration: underline;
+  color: black;
+  border: solid;
 }
 
 @media (prefers-reduced-motion: no-preference) {
