--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -340,11 +340,6 @@ body {
     height: 100vh;
 }
 
-.sd-question__content {
-    display: flex;
-    justify-content: center;
-}
-
 .body-frame-banner {
     position: absolute;
 }
@@ -518,19 +513,23 @@ body {
     z-index: 1000;
 }
 
-.container-shadow-outset {
+.container-shadow {
     width: 100%;
     height: 100%;
-    box-shadow: 0 0 10px #fbbffa;
+    box-shadow: inset 0 0 15px #fbbffa;
+    padding: 20px;
 }
 
-.container-shadow-inset {
+.container-border {
     width: 100%;
     height: 100%;
-    box-shadow: inset 0 0 300px #fbbffa6e, inset 0 0 10px #fbbffa;
+    border: magenta 1px solid;
+    outline-offset: -2px;
+    outline: 1px solid white;
+    align-items: center !important;
+    box-shadow: 0 0 15px #fbbffa, inset 0 0 0 2px magenta;
     display: flex;
     justify-content: center;
-    align-items: center !important;
 }
 
 .container {
@@ -540,6 +539,21 @@ body {
     justify-content: center;
     align-items: center !important;
     background-color: rgba(175, 226, 238, 0);
+    border: magenta 5px solid;
+}
+
+a {
+    font-family: 'Horizon', serif;
+}
+
+.container {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center !important;
+    background-color: rgba(175, 226, 238, 0);
+    border: magenta 1px solid;
 }
 
 .select-disable {
