--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,3 +1,4 @@
+$animation-length: 4s;
 .home {
   width: 100%;
   height: 100%;
@@ -128,5 +129,87 @@
   }
   100% {
     transform: translate(0, 0);
+  }
+}
+
+$steps: 50;
+
+.home-title {
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  outline: none;
+  font-size: 1.5rem;
+  text-align: center;
+  &,
+  * {
+    animation: glitch-text $animation-length 1 steps($steps);
+    display: inline-block;
+  }
+}
+
+@keyframes glitch-text {
+  @for $i from 1 to $steps {
+    $per: calc(100% / $steps * $i);
+    $weight: (
+            100,
+            200,
+            300,
+            400,
+            500,
+            600,
+            700
+    );
+    $style: (
+            normal,
+            italic,
+            normal,
+            normal
+    );
+    $decor: (
+            line-through,
+            none,
+            none,
+            underline,
+            none,
+            none,
+            none,
+            none
+    );
+    $fonts: (
+            'Horizon Outline',
+            'Horizon Outline',
+            'Horizon Outline',
+            'Horizon Outline',
+            'Horizon',
+            'Horizon',
+            'Horizon Lines',
+            'Horizon Lines',
+            'Horizon Elements',
+            'Horizon Elements',
+            'Horizon Elements',
+            'Horizon Elements',
+            'Horizon Elementsthree',
+            'Horizon Elementsthree',
+            'Horizon Elementsthree',
+            'Horizon Elementsthree',
+            'Horizon Elementsfour',
+            'Horizon Elementsfour',
+            'Horizon Elementsfour',
+            'Horizon Elementsfour',
+    );
+
+    $arrayF: random(20);
+    $arrayW: random(7);
+    $arrayS: random(4);
+    $arrayD: random(8);
+
+    #{$per} {
+      font-family: nth($fonts, $arrayF);
+      font-weight: nth($weight, $arrayW);
+      font-style: nth($style, $arrayS);
+      text-decoration: nth($decor, $arrayD);
+    }
   }
 }
