add multiple home links

--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -16,18 +16,23 @@ $animation-length: 4s;
 }
 
 .home-link-2 {
-  top: 40%;
+  top: 30%;
   left: 20%;
 }
 
 .home-link-3 {
-  top: 60%;
+  top: 45%;
   left: 15%;
 }
 
 .home-link-4 {
-  top: 80%;
+  top: 55%;
   left: 25%;
+}
+
+.home-link-5 {
+  top: 70%;
+  left: 40%;
 }
 
 .home-link {
