--- a/src/styles/HomeLink.scss
+++ b/src/styles/HomeLink.scss
@@ -1,3 +1,11 @@
+.home-link {
+  position: absolute;
+  transform: translateX(-50%);
+  width: 15.5rem;
+  color: white;
+  box-shadow: 0 25px 15px 0 rgba(0, 0, 0, 0.2);
+}
+
 .home-link a {
   color: white;
 }
