--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,7 @@
+html {
+    font-size: 14px;
+}
+
 body {
     margin: 0;
     --sjs-font-questiontitle-family: 'Aeonik Medium', 'Roboto Light', 'Roboto' sans-serif;
@@ -9,6 +13,16 @@ body {
 
 h1, h2 {
     font-family: 'Horizon Outline', 'Roboto', sans-serif;
+}
+
+.box {
+    text-decoration: underline;
+    background: #d9d8d8;
+    border: 1px solid;
+}
+
+.box-shadow {
+    box-shadow: 5px 5px;
 }
 
 h3, h4 {
@@ -32,6 +46,12 @@ div, span {
 }
 
 a {
+    color: initial;
+    text-decoration: none;
+}
+
+a:visited {
+    color: initial;
     text-decoration: none;
 }
 
