--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,39 +1,54 @@
-$animation-length: 4s;
-
 .home {
   width: 100%;
   height: 100%;
   position: relative;
+  background-color: rgb(255 72 72);
 }
 
-.home-image-container {
-  display: inline-block;
+.home-exposition-container {
+  position: absolute;
+  top: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none;
 }
 
-.home-link-1 {
-  top: 25%;
-  left: 35%;
-  z-index: 20;
+.home-exposition {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.home-link-2 {
-  top: 30%;
-  left: 15%;
-  z-index: 19;
+.home-exposition-art {
+  width: 512px;
+  height: 512px;
+  box-shadow: 2px 2px 2px 2px;
 }
 
-.home-link-3 {
-  top: 40%;
-  left: 30%;
-  z-index: 18;
+.home-exposition-note {
+  color: black;
+  background-color: white;
+  box-shadow: 2px 2px 2px 2px;
 }
 
-.home-link-4 {
-  top: 50%;
-  left: 15%;
-  z-index: 17;
+.home-row-1 {
+  background-color: rgb(130 34 255 / 22%);
+}
+
+.home-row-2 {
+  background-color: #ff00ff75;
+}
+
+.home-row-3 {
+  background-color: #ff00ffa8;
+}
+
+.home-row-4 {
+  background-color: #00ffff5c;
+  text-align: right;
 }
 
 .home-link-5 {
@@ -48,11 +63,6 @@ $animation-length: 4s;
   z-index: 16;
 }
 
-.home-image {
-  width: 100%;
-  height: 100%;
-}
-
 .greetings {
   position: absolute;
   width: 24.5rem;
@@ -63,16 +73,12 @@ $animation-length: 4s;
 
 @media (prefers-reduced-motion: no-preference) {
   .home-image-container {
-    animation: home-image-spin infinite 500s linear;
+    //animation: home-image-spin infinite 500s linear;
   }
 
   .home-image-link {
     animation: home-image-spin-compensate infinite 500s linear;
   }
-}
-
-.home-image-container {
-  pointer-events: none;
 }
 
 @keyframes home-image-spin {
@@ -93,7 +99,6 @@ $animation-length: 4s;
   }
 }
 
-$steps: 50;
 
 .home-title {
   left: 50%;
@@ -101,76 +106,11 @@ $steps: 50;
   transform: translate(-50%, -50%);
   position: absolute;
   outline: none;
-  font-size: 1.5rem;
   text-align: center;
-  &,
-  * {
-    animation: glitch-text $animation-length 1 steps($steps);
-    display: inline-block;
-  }
+  background-color: transparent;
 }
 
-@keyframes glitch-text {
-  @for $i from 1 to $steps {
-    $per: calc(100% / $steps * $i);
-    $weight: (
-            100,
-            200,
-            300,
-            400,
-            500,
-            600,
-            700
-    );
-    $style: (
-            normal,
-            italic,
-            normal,
-            normal
-    );
-    $decor: (
-            line-through,
-            none,
-            none,
-            underline,
-            none,
-            none,
-            none,
-            none
-    );
-    $fonts: (
-            'Horizon Outline',
-            'Horizon Outline',
-            'Horizon Outline',
-            'Horizon Outline',
-            'Horizon',
-            'Horizon',
-            'Horizon Lines',
-            'Horizon Lines',
-            'Horizon Elements',
-            'Horizon Elements',
-            'Horizon Elements',
-            'Horizon Elements',
-            'Horizon Elementsthree',
-            'Horizon Elementsthree',
-            'Horizon Elementsthree',
-            'Horizon Elementsthree',
-            'Horizon Elementsfour',
-            'Horizon Elementsfour',
-            'Horizon Elementsfour',
-            'Horizon Elementsfour',
-    );
-
-    $arrayF: random(20);
-    $arrayW: random(7);
-    $arrayS: random(4);
-    $arrayD: random(8);
-
-    #{$per} {
-      font-family: nth($fonts, $arrayF);
-      font-weight: nth($weight, $arrayW);
-      font-style: nth($style, $arrayS);
-      text-decoration: nth($decor, $arrayD);
-    }
-  }
+.home-title-s {
+  font-family: 'Horizon Outline', serif;
+  font-size: 5rem;
 }
