--- a/src/styles/HomeLink.scss
+++ b/src/styles/HomeLink.scss
@@ -1,17 +1,5 @@
-.home-link {
-  position: absolute;
-  transform: translateX(-50%);
-  width: 15.5rem;
-  color: white;
-  box-shadow: 0 25px 15px 0 rgba(0, 0, 0, 0.2);
-}
-
-.home-link a {
-  color: white;
-}
-
-.home-link-header {
-  background-color: magenta;
+.link-header {
+  background-color: transparent;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -21,7 +9,7 @@
   margin-top: 2px;
 }
 
-.home-link-explanation {
+.link-explanation {
   background-color: magenta;
   border: black solid 3px;
   font-size: 0.875rem;
@@ -32,14 +20,14 @@
   text-decoration: none;
 }
 
-.home-link-header .typed-cursor {
+.link-header .typed-cursor {
   position: relative;
   font-size: 0.75rem;
   top: -1px;
   border-bottom: white solid 2px;
 }
 
-.home-link-header .typed-cursor.typed-cursor--blink {
+.link-header .typed-cursor.typed-cursor--blink {
   position: relative;
   font-size: 0.75rem;
   top: -1px;
