--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,3 @@
-html {
-    font-size: 14px;
-}
-
 body {
     margin: 0;
     --sjs-font-questiontitle-family: 'Aeonik Medium', 'Roboto Light', 'Roboto' sans-serif;
@@ -9,9 +5,20 @@ body {
     font-family: 'Aeonik Medium', 'Roboto Light', 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    animation: blur 3s;
+    animation-timing-function: steps(10, jump-end);
 }
 
-h1, h2 {
+@keyframes blur {
+    0% {
+        filter: blur(7px);
+    }
+    100% {
+        filter: blur(0px);
+    }
+}
+
+h1, h2, h3, h4 {
     font-family: 'Horizon Outline', 'Roboto', sans-serif;
 }
 
@@ -25,12 +32,8 @@ h1, h2 {
     box-shadow: 5px 5px;
 }
 
-h3, h4 {
-    font-family: 'Horizon', 'Roboto', sans-serif;
-}
-
 h1 {
-    font-size: 1.5rem;
+    font-size: 6rem;
 }
 
 h2 {
@@ -38,7 +41,11 @@ h2 {
 }
 
 h3 {
-    font-size: 1rem;
+    font-size: 1.5rem;
+}
+
+h3 span {
+    font-size: 1.5rem;
 }
 
 div, span {
@@ -67,25 +74,10 @@ body {
 }
 
 .container {
-    padding: 45px;
+    padding: 4.5rem;
     box-sizing: border-box;
     width: 100vw;
     height: 100vh;
-}
-
-.frame-shadow {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    box-shadow: inset 0 0 20px #fbbffa6e;
-    z-index: 1000;
-}
-
-.container-shadow {
-    width: 100%;
-    height: 100%;
-    box-shadow: inset 0 0 15px #fbbffa;
-    padding: 20px;
 }
 
 .container-border {
