--- a/wow/src/styles/Just.scss
+++ b/wow/src/styles/Just.scss
@@ -5,8 +5,8 @@
   padding: 10px 16px 16px 10px;
   pointer-events: none;
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: $sceneWidth;
+  height: $sceneWidth;
   box-sizing: border-box;
 }
 
