--- a/wow/src/styles/Mint.scss
+++ b/wow/src/styles/Mint.scss
@@ -1,4 +1,17 @@
 @import "Basics";
+@import "include-media/dist/_include-media";
+
+$breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
+
+.rk {
+  width: 100%;
+  height: 100%;
+}
+
+.rk > div {
+  width: 100%;
+  height: 100%;
+}
 
 .mint {
   width: 100%;
@@ -21,6 +34,28 @@
     position: absolute;
     transform: scale(0.5);
   }
+}
+
+@include media("<=tablet") {
+  .mint {
+    justify-content: space-between;
+  }
+  .just-preview {
+    width: min(90vh, 90vw);
+    height: min(90vh, 90vw);
+
+    .just {
+      transform: scale(0.3);
+    }
+  }
+}
+
+.generate-btn {
+  color: white;
+  background-color: $pink;
+  padding: 10px;
+  width: 10rem;
+  box-shadow: 3px 3px;
 }
 
 .mint-btn {
