--- a/wow/src/styles/index.scss
+++ b/wow/src/styles/index.scss
@@ -1,3 +1,6 @@
+@import "include-media/dist/_include-media";
+$breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
+
 body {
     margin: 0;
     --sjs-font-questiontitle-family: 'Aeonik Medium', 'Roboto Light', 'Roboto' sans-serif;
