--- a/wow/src/Random/styles/Chess.scss
+++ b/wow/src/Random/styles/Chess.scss
@@ -17,8 +17,8 @@
 
 .just-random-chess-grid {
   position: absolute;
-  width: $sceneWithoutMargins;
-  height: $sceneWithoutMargins;
+  width: var(--scene-size);
+  height: var(--scene-size);
 }
 
 .just-random-chess-grid-cell {
