--- a/wow/src/styles/Glitch.scss
+++ b/wow/src/styles/Glitch.scss
@@ -14,8 +14,8 @@
 
 .just-glitch-img {
   position: absolute;
-  max-height: $imageSize;
-  max-width: $imageSize;
+  max-height: var(--image-size);
+  max-width: var(--image-size);
 }
 
 @for $i from 1 to 1000 {
@@ -26,8 +26,9 @@
 }
 
 @for $i from 1 to 8 {
+  $r: random(1000);
   .animation-delayed-start-#{$i} {
-    animation-delay: #{$i/8*200}ms !important;
+    animation-delay: calc(#{$i} / 8 * var(--animation-phase) * var(--animation-delay-multiplier) * -1) !important;
   }
 }
 
