--- a/wow/src/styles/Glitch/Glitch2.scss
+++ b/wow/src/styles/Glitch/Glitch2.scss
@@ -1,20 +1,22 @@
+@import "../../styles/Basics";
+
 .just-glitch-preset-2 {
   .just-glitch-img-1 {
     margin: 0;
     line-height: 0;
     z-index: 10;
-    animation: glitch-preset-2-1 3s infinite;
+    animation: glitch-preset-2-1 var(--animation-length) infinite;
   }
 
   .just-glitch-img-2 {
     filter: invert(0.5);
-    animation: glitch-preset-2-2 3s infinite;
+    animation: glitch-preset-2-2 var(--animation-length) infinite;
     z-index: 5;
   }
 
   .just-glitch-img-3 {
     filter: invert(1);
-    animation: glitch-preset-2-3 3s infinite;
+    animation: glitch-preset-2-3 var(--animation-length) infinite;
     z-index: 5;
   }
 }
@@ -24,13 +26,13 @@
     transform: none;
     opacity: 1;
   }
-  7% {
-    transform: skew(-0.5deg, -0.9deg);
-    opacity: 0.75;
-  }
-  10% {
+  22% {
     transform: none;
     opacity: 1;
+  }
+  25% {
+    transform: skew(-0.5deg, -0.9deg);
+    opacity: 0.75;
   }
   27% {
     transform: none;
@@ -44,15 +46,15 @@
     transform: none;
     opacity: 1;
   }
-  52% {
+  48% {
     transform: none;
     opacity: 1;
   }
-  55% {
+  50% {
     transform: skew(-1deg, 0.2deg);
     opacity: 0.75;
   }
-  50% {
+  51% {
     transform: none;
     opacity: 1;
   }
@@ -64,7 +66,15 @@
     transform: skew(0.4deg, 1deg);
     opacity: 0.75;
   }
-  80% {
+  76% {
+    transform: none;
+    opacity: 1;
+  }
+  96% {
+    transform: skew(0.4deg, 1deg);
+    opacity: 0.75;
+  }
+  99% {
     transform: none;
     opacity: 1;
   }
@@ -79,13 +89,13 @@
     transform: none;
     opacity: 0.25;
   }
-  7% {
-    transform: translate(-2px, -3px);
-    opacity: 0.5;
-  }
-  10% {
+  22% {
     transform: none;
     opacity: 0.25;
+  }
+  25% {
+    transform: translate(-2px, -3px);
+    opacity: 0.5;
   }
   27% {
     transform: none;
@@ -99,15 +109,15 @@
     transform: none;
     opacity: 0.25;
   }
-  52% {
+  48% {
     transform: none;
     opacity: 0.25;
   }
-  55% {
+  50% {
     transform: translate(-5px, -1px);
     opacity: 0.5;
   }
-  50% {
+  51% {
     transform: none;
     opacity: 0.25;
   }
@@ -119,7 +129,15 @@
     transform: translate(-2px, -6px);
     opacity: 0.5;
   }
-  80% {
+  76% {
+    transform: none;
+    opacity: 0.25;
+  }
+  96% {
+    transform: translate(-2px, -6px);
+    opacity: 0.5;
+  }
+  99% {
     transform: none;
     opacity: 0.25;
   }
@@ -134,13 +152,13 @@
     transform: none;
     opacity: 0.25;
   }
-  7% {
-    transform: translate(2px, 3px);
-    opacity: 0.5;
-  }
-  10% {
+  22% {
     transform: none;
     opacity: 0.25;
+  }
+  25% {
+    transform: translate(2px, 3px);
+    opacity: 0.5;
   }
   27% {
     transform: none;
@@ -154,15 +172,15 @@
     transform: none;
     opacity: 0.25;
   }
-  52% {
+  48% {
     transform: none;
     opacity: 0.25;
   }
-  55% {
+  50% {
     transform: translate(5px, 1px);
     opacity: 0.5;
   }
-  50% {
+  51% {
     transform: none;
     opacity: 0.25;
   }
@@ -174,7 +192,15 @@
     transform: translate(2px, 6px);
     opacity: 0.5;
   }
-  80% {
+  76% {
+    transform: none;
+    opacity: 0.25;
+  }
+  96% {
+    transform: translate(2px, 6px);
+    opacity: 0.5;
+  }
+  99% {
     transform: none;
     opacity: 0.25;
   }
