--- a/wow/src/styles/JustFrame.scss
+++ b/wow/src/styles/JustFrame.scss
@@ -5,7 +5,11 @@
     overflow: hidden;
     position: relative;
     background: black;
-    box-shadow: 1px 1px black, 2px 2px white, 3px 3px black, 4px 4px white, 5px 5px black, 6px 6px white;
+    box-shadow: -1px 1px 0 0 black, -2px 2px 0 0 white, -3px 3px 0 0 black, -4px 4px 0 0 white, -5px 5px 0 0 black, -6px 6px 0 0 white;
+}
+
+.just-random-frame.just-random-frame-plain {
+    box-shadow: none;
 }
 
 .just-random-frame-toolbar {
